<resources>
    <string name="app_name">AndroidGame</string>
    <string name="number_button_1">1</string>
    <string name="number_button_2">2</string>
    <string name="number_button_3">3</string>
    <string name="number_button_4">4</string>
    <string name="number_button_5">5</string>
    <string name="number_button_6">6</string>
    <string name="number_button_7">7</string>
    <string name="number_button_8">8</string>
    <string name="number_button_9">9</string>
    <string name="number_button_0">0</string>
    <string name="clean_button">C</string>
    <string name="start_game">Play!</string>
    <string name="calculate_expression">Calculate expression</string>
    <string name="schulte_table">Schulte table</string>
    <string name="repeat_drawing">Repeat drawing</string>
    <string name="restart">restart</string>
    <string name="to_menu">menu</string>
    <string name="back">back</string>
    <string name="game_score">"Score: "</string>
    <string name="best_game_score">"Best score: "</string>
    <string name="exit">Exit</string>
    <string name="games">Games</string>
    <string name="exit_alert">Do you want to quit?</string>
    <string name="leaderboard">Leaderboard</string>
    <string name="update_password">Update password</string>
    <string name="log_out">log out</string>
    <string name="save_changes">Save changes</string>
    <string name="name">Name</string>
    <string name="delete_account">Delete account</string>
    <string name="you">You</string>
    <string name="authorization">Authorization</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="log_in">Log in</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign up</string>
    <string name="enter_email">Enter email</string>
    <string name="enter_password">Enter the password</string>
    <string name="account_does_not_exist">An account with this email does not exist</string>
    <string name="wrong_password">Wrong password</string>
    <string name="login_completed">Login completed</string>
    <string name="enter_login">Enter login</string>
    <string name="login_min_length">Login must have more than 5 characters</string>
    <string name="login_max_length">Login must have no more than 20 characters</string>
    <string name="login_starts_with_letter">The login must begin with the letter</string>
    <string name="login_does_not_end_with_a_dot">The login cannot end with a dot.</string>
    <string name="login_contains_specific_characters">Login should have only Latin letters, numbers, dashes, underscores and dots</string>
    <string name="user_with_name_exists">A user with this name already exists</string>
    <string name="user_is_added">User is added!</string>
    <string name="user_with_email_exists">An account with this email already exists</string>
    <string name="invalid_email_or_password">Email address or password is not entered correctly.Password must be more than 5 characters long</string>
    <string name="points">"Points: "</string>
    <string name="quiting_the_game">Выход из игры</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="Log_in_to_see_the_leaderboard">Log in to see the leaderboard</string>
    <string name="name_is_updated">Name is updated</string>
    <string name="changes_saving">Changes saving</string>
    <string name="do_you_want_to_log_out">Do you want to log out of your account?</string>
    <string name="logout">Logout</string>
    <string name="account_deletion">Account deletion</string>
    <string name="do_you_want_to_delete_account">Do you want to delete account?</string>
    <string name="account_is_deleted">Account is deleted</string>
    <string name="email_is_incorrect">Email is incorrect</string>
    <string name="check_email">Check your email for password recovery</string>
    <string name="try_again">Try again. Something went wrong</string>
    <string name="do_you_want_to_update_password">Do you want to update password?</string>
    <string name="password_update">Password update</string>
    <string name="new_best_score">New best score!</string>
    <string name="best_scores">Best scores</string>
    <string name="reset_password">Reset your password</string>
    <string name="send_password_reset_email">Send password reset email</string>
    <string name="games_menu">Games menu</string>
    <string-array name="descriptions">
        <item>Find all the numbers in ascending order as many times as possible in 60 seconds</item>
        <item>Repeat as many drawings as possible in 60 seconds</item>
        <item>Calculate as many expressions as possible in 60 seconds</item>
    </string-array>
</resources>