<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="true"
    tools:context="com.sumsung.braindash.com.sumsung.braindash.authorization.LoginFragment">

   <androidx.constraintlayout.widget.ConstraintLayout
       android:layout_width="328dp"
       android:layout_height="241dp"
       app:layout_constraintBottom_toBottomOf="parent"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintHorizontal_bias="0.493"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toTopOf="parent">


      <EditText
          android:id="@+id/email_field"
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:background="@drawable/edit_text_background"
          android:ems="10"

          android:hint="@string/email"
          android:inputType="textEmailAddress"
          android:minHeight="48dp"

          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toTopOf="parent" />

      <EditText
          android:id="@+id/password_field"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginTop="21dp"
          android:background="@drawable/edit_text_background"
          android:ems="10"
          android:hint="@string/password"
          android:inputType="textPassword"
          android:minHeight="48dp"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintHorizontal_bias="0.0"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@+id/email_field" />

      <Button
          android:id="@+id/sing_in_button"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:backgroundTint="@color/purple_2"
          android:fontFamily="@font/button_font"
          android:padding="15sp"
          android:text="@string/log_in"
          android:textSize="20sp"
          app:cornerRadius="30dp"
          app:layout_constraintBottom_toBottomOf="parent"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="parent" />

      <Button
          android:id="@+id/to_reset_password_fragment_button"
          style="@style/Widget.MaterialComponents.Button.TextButton"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:fontFamily="@font/button_font"
          android:text="@string/forgot_password"
          android:textColor="@color/white"
          android:textSize="15sp"
          app:cornerRadius="30dp"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintTop_toBottomOf="@+id/password_field" />
   </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>